# floxide

./: .cursorrules  .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cargo-workspaces.toml  index.html  mkdocs.yml  release.toml  rename_to_floxide.sh
.github/workflows/: ci.yml  docs-simple.yml  docs.yml  documentation.yml  release.yml  version-bump.yml
REBRANDING/: index.html
adrs/: index.html
adrs/0001-adr-process-and-format/: index.html
adrs/0002-project-structure-and-crate-organization/: index.html
adrs/0003-core-framework-abstractions/: index.html
adrs/0004-async-runtime-selection/: index.html
adrs/0005-state-serialization-deserialization/: index.html
adrs/0006-workflow-observability/: index.html
adrs/0007-batch-processing-implementation/: index.html
adrs/0008-event-driven-node-extensions/: index.html
adrs/0008-node-lifecycle-methods/: index.html
adrs/0009-cloneable-traits-for-batch-contexts/: index.html
adrs/0009-event-driven-workflow-pattern/: index.html
adrs/0010-workflow-cloning-strategy/: index.html
adrs/0011-closure-lifetime-management/: index.html
adrs/0012-test-implementation-patterns/: index.html
adrs/0013-workflow-patterns/: index.html
adrs/0014-crate-publishing-and-cicd/: index.html
adrs/0015-batch-processing-examples-and-patterns/: index.html
adrs/0015-node-abstraction-hierarchy/: index.html
adrs/0016-transform-node-and-async-extensions/: index.html
adrs/0017-event-driven-node-pattern/: index.html
adrs/0017-reactive-node-implementation/: index.html
adrs/0018-rename-floxide-async-to-floxide-transform/: index.html
adrs/0019-examples-structure-standardization/: index.html
adrs/0020-event-driven-workflow-routing-guidelines/: index.html
adrs/0021-timer-node-implementation/: index.html
api/floxide-core/: index.html
benches/: Cargo.toml
benches/src/: lib.rs
contributing/: index.html
core-concepts/: index.html
crates/flowrs-async/: Cargo.toml
crates/flowrs-async/src/: lib.rs
crates/flowrs-event/: Cargo.toml
crates/flowrs-event/src/: lib.rs
crates/flowrs-longrunning/: Cargo.toml
crates/flowrs-longrunning/src/: lib.rs
crates/flowrs-reactive/: Cargo.toml
crates/flowrs-reactive/src/: lib.rs
crates/flowrs-timer/: Cargo.toml
crates/flowrs-timer/src/: lib.rs
crates/flowrs-transform/: Cargo.toml
crates/flowrs-transform/src/: lib.rs
crates/floxide-async/: Cargo.toml
crates/floxide-async/src/: lib.rs
crates/floxide-core/: Cargo.toml
crates/floxide-core/src/: batch.rs  checkpoint.rs  composite.rs  context.rs  distributed.rs  error.rs  lib.rs  lifecycle.rs  merge.rs  node.rs  retry.rs  source.rs  split.rs  transition.rs  workflow.rs
crates/floxide-core/src/distributed/: context_store.rs  error_store.rs  event_log.rs  liveness_store.rs  metrics_store.rs  mod.rs  orchestrator.rs  run_info_store.rs  types.rs  work_item_store.rs  work_queue.rs  worker.rs
crates/floxide-core/src/tests/: action_type.rs  node.rs  workflow.rs
crates/floxide-event/: Cargo.toml
crates/floxide-event/src/: lib.rs
crates/floxide-longrunning/: Cargo.toml
crates/floxide-longrunning/src/: lib.rs
crates/floxide-macros/: Cargo.toml
crates/floxide-macros-support/: Cargo.toml
crates/floxide-macros-support/src/: lib.rs
crates/floxide-macros/src/: lib.rs  merge.rs  node.rs  workflow.rs
crates/floxide-macros/tests/: compile_fail_tests.rs  composite_arms.rs  derive_merge.rs  workflow.rs
crates/floxide-macros/tests/ui/: type_mismatch.rs  type_mismatch.stderr
crates/floxide-reactive/: Cargo.toml
crates/floxide-reactive/src/: lib.rs
crates/floxide-redis/: Cargo.toml
crates/floxide-redis/examples/: redis_distributed_example.rs
crates/floxide-redis/src/: checkpoint_store.rs  client.rs  config.rs  context_store.rs  error_store.rs  lib.rs  liveness_store.rs  metrics_store.rs  run_info_store.rs  work_item_store.rs  work_queue.rs
crates/floxide-redis/tests/: checkpoint_store.rs  context_store.rs  error_store.rs  helpers.rs  liveness_store.rs  metrics_store.rs  run_info_store.rs  work_item_store.rs  work_queue.rs
crates/floxide-timer/: Cargo.toml
crates/floxide-timer/src/: lib.rs
crates/floxide-transform/: Cargo.toml
crates/floxide-transform/src/: lib.rs
css/: extra.css
docs/: REBRANDING.md  contributing.md  index.md
examples/: Cargo.toml  README.md  batch_example.rs  batch_processing.rs  branching_example.rs  cancellation_example.rs  checkpoint_example.rs  distributed_example.rs  distributed_orchestrated_merge_example.rs  error_fallback_macro.rs  event_driven_workflow.rs  generics_example.rs  lifecycle_node.rs  llm_article_example.rs  longrunning_node.rs  merge_example.rs  minimal_example.rs  minimal_example_macro.rs  minimal_example_without_macro.rs  nested_workflow_example.rs  node_macro_example.rs  order_example.rs  order_processing.rs  reactive_node.rs  redis_distributed_example.rs  retry_example.rs  retry_macro_example.rs  simple_context_example.rs  split_example.rs  terminal_node_example.rs  timeout_example.rs  timer_example.rs  timer_node.rs  transform_node.rs  workflow_dot.rs
examples/basic-workflow/: index.html
examples/batch-processing/: index.html
examples/event-driven-workflow/: index.html
examples/examples/: batch_processing.rs  event_driven_workflow.rs  lifecycle_node.rs  longrunning_node.rs  reactive_node.rs  timer_node.rs
examples/longrunning-node/: index.html
examples/reactive-node/: index.html
examples/timer-node/: index.html
examples/transform-node/: index.html
flowrs/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
flowrs/benches/benches/: workflow_execution.rs
flowrs/crates/flowrs-async/src/: lib.rs
flowrs/crates/flowrs-core/src/: action.rs  batch.rs  error.rs  lib.rs  lifecycle.rs  node.rs  retry.rs  workflow.rs
flowrs/crates/flowrs-core/src/tests/: action_type.rs  workflow.rs
floxide-tutorial/: index.html
js/: mermaid-init.js
scripts/: release_with_workspaces.sh  run_ci_locally.sh  serve-docs.sh  update_dependency_versions.sh  update_subcrate_versions.sh  update_versions.sh
search/: search_index.json
src/: lib.rs
(+171 files in other folders)
