[workspace]
members = [
    "crates/floxide-core",
    "crates/floxide-macros",
    # "crates/floxide-transform",
    # "crates/floxide-event",
    # "crates/floxide-timer",
    # "crates/floxide-longrunning",
    # "crates/floxide-reactive",
    "benches",
]
resolver = "2"

[workspace.package]
version = "1.1.2"
edition = "2021"
authors = ["Floxide Contributors"]
license = "MIT"
repository = "https://github.com/aitoroses/floxide"
readme = "README.md"
description = "A directed graph workflow system in Rust"
keywords = ["workflow", "graph", "async", "pipeline", "directed-graph"]
categories = ["asynchronous", "concurrency", "data-structures"]
homepage = "https://github.com/aitoroses/floxide"
documentation = "https://docs.rs/floxide"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1.77"
thiserror = "1.0.58"
tracing = "0.1.40"
futures = "0.3.30"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
chrono = { version = "0.4.34", features = ["serde"] }
rand = "0.8.5"
tracing-subscriber = "0.3.18"
criterion = "0.5.1"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.10", features = ["full"] }

floxide-core = { path = "./crates/floxide-core" }
floxide-macros = { path = "./crates/floxide-macros" }
# floxide-transform = { path = "./crates/floxide-transform" }
# floxide-event = { path = "./crates/floxide-event" }
# floxide-timer = { path = "./crates/floxide-timer" }
# floxide-longrunning = { path = "./crates/floxide-longrunning" }
# floxide-reactive = { path = "./crates/floxide-reactive" }

# Create a library target at the root to make examples work
[package]
name = "floxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

# Define features
[features]
default = []
# Define features with dependencies on subcrates
# transform = ["floxide-transform"]
# event = ["floxide-event"]
# timer = ["floxide-timer"]
# longrunning = ["floxide-longrunning"]
# reactive = ["floxide-reactive"]
# full = ["transform", "event", "timer", "longrunning", "reactive"]

[dependencies]
# Core dependencies (always included)
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true

# Core crate (always included)
floxide-core = { path = "./crates/floxide-core", version = "=1.1.2" }
floxide-macros = { path = "./crates/floxide-macros", version = "=1.1.2" }

# Feature-gated dependencies on subcrates
# floxide-transform = { path = "./crates/floxide-transform", version = "=1.1.2", optional = true } 
# floxide-event = { path = "./crates/floxide-event", version = "=1.1.2", optional = true }
# floxide-timer = { path = "./crates/floxide-timer", version = "=1.1.2", optional = true }
# floxide-longrunning = { path = "./crates/floxide-longrunning", version = "=1.1.2", optional = true }
# floxide-reactive = { path = "./crates/floxide-reactive", version = "=1.1.2", optional = true }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "thin"
codegen-units = 1
