[workspace]
members = [
    "crates/floxide-core",
    "crates/floxide-macros",
    "crates/floxide-redis",
    "benches",
]
resolver = "2"

[workspace.package]
version = "3.1.0"
edition = "2021"
authors = ["Floxide Contributors"]
license = "MIT"
repository = "https://github.com/aitoroses/floxide"
readme = "README.md"
description = "A directed graph workflow system in Rust"
keywords = ["workflow", "graph", "async", "pipeline", "directed-graph"]
categories = ["asynchronous", "concurrency", "data-structures"]
homepage = "https://github.com/aitoroses/floxide"
documentation = "https://docs.rs/floxide"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1.77"
thiserror = "1.0.58"
tracing = "0.1.40"
futures = "0.3.30"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
chrono = { version = "0.4.34", features = ["serde"] }
rand = "0.8.5"
tracing-subscriber = "0.3.18"
criterion = "0.5.1"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.10", features = ["full"] }
testcontainers = "0.23.3"

floxide-core = { path = "./crates/floxide-core" }
floxide-macros = { path = "./crates/floxide-macros" }
floxide-redis = { path = "./crates/floxide-redis" }

# Create a library target at the root to make examples work
[package]
name = "floxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

# Define features
[features]
default = []
redis = ["floxide-redis"]

[dependencies]
# Core dependencies (always included)
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true

# Core crate (always included)
floxide-core = { path = "./crates/floxide-core", version = "=3.1.0" }
floxide-macros = { path = "./crates/floxide-macros", version = "=3.1.0" }
floxide-redis = { path = "./crates/floxide-redis", version = "=3.1.0", optional = true }

[dev-dependencies]
rllm = "1.1.7"
testcontainers = { workspace = true }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "thin"
codegen-units = 1
