[package]
name = "floxide-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmarks for the floxide framework"
publish = false

[dependencies]
floxide-core = { path = "../crates/floxide-core" }
floxide-transform = { path = "../crates/floxide-transform" }
tokio = { workspace = true }
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "workflow_execution"
harness = false
