[package]
name = "flowrs-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flowrs-core = { path = "../crates/flowrs-core" }
flowrs-transform = { path = "../crates/flowrs-transform" }
flowrs-event = { path = "../crates/flowrs-event" }
flowrs-timer = { path = "../crates/flowrs-timer" }
flowrs-async = { path = "../crates/flowrs-async" }

anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }

[[example]]
name = "lifecycle_node"
path = "examples/lifecycle_node.rs"

[[example]]
name = "transform_node"
path = "examples/transform_node.rs"

[[example]]
name = "order_processing"
path = "examples/order_processing.rs"

[[example]]
name = "batch_processing"
path = "examples/batch_processing.rs"

[[example]]
name = "event_driven_workflow"
path = "examples/event_driven_workflow.rs"

[[example]]
name = "timer_node"
path = "examples/timer_node.rs"
