[workspace]
members = ["crates/flowrs-core", "crates/flowrs-async", "examples", "benches"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Flowrs Contributors"]
license = "MIT"
repository = "https://github.com/username/flowrs"
readme = "README.md"
description = "A directed graph workflow system in Rust"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
thiserror = "1.0.56"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.34", features = ["serde"] }
rand = "0.8.5"
tracing-subscriber = "0.3.18"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "thin"
codegen-units = 1
