[package]
name = "flowrs-event"
version.workspace = true
edition = "2021"
authors = ["Aitor Oses <aitor.oses@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aitoroses/flowrs"
description = "Event-driven node extensions for the Flowrs framework"

[dependencies]
flowrs-core = { path = "../flowrs-core" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[features]
default = ["tokio-full"]
tokio-full = ["tokio/full"]
tokio-minimal = ["tokio/rt", "tokio/sync", "tokio/time"]
