[package]
name = "flowrs-timer"
version = "0.1.1"
edition = "2021"
authors = ["Flowrs Contributors"]
description = "Timer-based node extensions for the Flowrs framework"
license = "MIT"
repository = "https://github.com/flowrs/flowrs"
keywords = ["workflow", "timer", "scheduling", "async"]
categories = ["asynchronous"]

[dependencies]
flowrs-core = { path = "../flowrs-core", version = "=0.1.1" }
async-trait = "0.1.77"
chrono = "0.4.34"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
thiserror = "1.0.57"
