[package]
name = "floxide-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core components of the floxide framework for directed graph workflows"
publish = true

[features]
default = ["async"]
async = ["dep:tokio"]

[dependencies]
async-trait = { workspace = true }
futures = "0.3.29"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
