[package]
name = "floxide-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core components of the floxide framework for directed graph workflows"
publish = true

[dependencies]
async-trait = { workspace = true }
futures = "0.3.29"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-util = { workspace = true }
chrono.workspace = true
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
checkpoint = []
