[package]
name = "floxide-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Event-driven node abstractions for the floxide framework"
publish = true

[dependencies]
floxide-core = { path = "../floxide-core", version = "=1.1.1" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[features]
default = ["tokio-full"]
tokio-full = ["tokio/full"]
tokio-minimal = ["tokio/rt", "tokio/sync", "tokio/time"]
