[package]
name = "floxide-longrunning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-running node abstractions for the floxide framework"
publish = true

[dependencies]
floxide-core = { path = "../floxide-core", version = "=1.1.0" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
