[package]
name = "floxide-reactive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactive node abstractions for the floxide framework"
publish = true

[dependencies]
floxide-core = { path = "../floxide-core", version = "=1.0.12" }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "time",
    "rt",
    "macros",
    "fs",
] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
