[package]
name = "floxide-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis implementation for Floxide distributed workflow system"
publish = true

[dependencies]
floxide-core = { path = "../floxide-core", version = "=3.1.0" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager", "json"] }
futures = "0.3.29"
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
testcontainers = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
floxide-macros = { path = "../floxide-macros" }
floxide = { path = "../.." }
