[package]
name = "floxide-timer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Timer node abstractions for the floxide framework"
publish = true
keywords = ["workflow", "timer", "scheduling", "async"]
categories = ["asynchronous"]

[dependencies]
floxide-core = { path = "../floxide-core", version = "=1.0.11" }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
