[package]
name = "floxide-transform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transform node abstractions for the floxide framework"

[dependencies]
floxide-core = { path = "../floxide-core" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[features]
default = ["tokio-full"]
tokio-full = ["tokio/full"]
tokio-minimal = ["tokio/rt", "tokio/sync"]
